--- a/daily.yml
+++ b/daily.yml
@@ -7,10 +7,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # Added permissions to allow the Action to push changes
+    permissions:
+      contents: write
+      
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3 # Updated to v3 for better stability
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: pip install holidays
+
       - name: Run script
         run: python generate_calendar.py
+
       - name: Commit changes
         run: |
           git config --global user.name 'GitHub Action'
